Closed
Bug 1040563
Opened 11 years ago
Closed 11 years ago
Firefox process remains forever after quit browser if set media.mediasource.enabled = true.
Categories
(Core :: General, defect)
Tracking
()
RESOLVED
FIXED
mozilla34
People
(Reporter: alice0775, Assigned: kinetik)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
Steps To Reproduce:
1. Open http://www.youtube.com/watch?v=eYDjV7ajuMo
2. Wait buffering
3. Moving seek-bar back or forward
4. Repeat step 3 until video stops playback and throbber is continuing spinning.
5. Quit browser
Actual Results:
Firefox process remains forever
Expected Results:
Firefox process should immediately disappears
Stack on shutdown hang(using crashfirefox.exe):
bp-6ef69880-134c-417a-87b4-e21d52140718
| Reporter | ||
Comment 1•11 years ago
|
||
Addition to step3:
Moving within buffered range
| Reporter | ||
Updated•11 years ago
|
status-firefox31:
--- → unaffected
status-firefox32:
--- → affected
status-firefox33:
--- → affected
Version: Trunk → 32 Branch
| Reporter | ||
Updated•11 years ago
|
Comment 2•11 years ago
|
||
It gets stuck in MediaSource::WaitForData() while MediaDecoderStateMachine is running SHUTDOWN. I wonder if there is a way to tell MediaSource to abort WaitForData() for SourceBuffer::AppendData() could be never called again during shutdown.
Hi Anthony,
Can you comment this? I am not familiar with the MediaSource code.
Flags: needinfo?(ajones)
| Reporter | ||
Comment 3•11 years ago
|
||
Oops, I fogot to set media.mediasource.enabled = true.
The prefs causes the problem.
| Reporter | ||
Updated•11 years ago
|
Summary: Firefox process remains forever after quit browser → Firefox process remains forever after quit browser if set media.mediasource.enabled = true.
Comment 4•11 years ago
|
||
(In reply to JW Wang [:jwwang] from comment #2)
> Can you comment this? I am not familiar with the MediaSource code.
I've added it to the things we need to fix in relation to MediaSource.
| Assignee | ||
Comment 5•11 years ago
|
||
Could be fixed by bug 1056441, or (shorter term) by breaking the wait on shutdown.
Depends on: 1056441
| Assignee | ||
Comment 6•11 years ago
|
||
Also remove mMediaSource from MediaSourceReader and rejig SetMediaSourceDuration to go via MediaSourceDecoder and handle mMediaSource being null.
Attachment #8477317 -
Flags: review?(cajbir.bugzilla)
Comment 7•11 years ago
|
||
Comment on attachment 8477317 [details] [diff] [review]
Move WaitForData/NotifyGotData from MediaSource to MediaSourceDecoder, which is off-main-thread friendly.
Review of attachment 8477317 [details] [diff] [review]:
-----------------------------------------------------------------
::: content/media/mediasource/MediaSourceDecoder.cpp
@@ +94,5 @@
> +MediaSourceDecoder::Shutdown()
> +{
> + MediaDecoder::Shutdown();
> +
> + // Kick WaitForData out of it's slumber.
s/it's/its/
Attachment #8477317 -
Flags: review?(cajbir.bugzilla) → review+
| Assignee | ||
Comment 8•11 years ago
|
||
Comment 9•11 years ago
|
||
Assignee: nobody → kinetik
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
You need to log in
before you can comment on or make changes to this bug.
Description
•